BSSN modules: Rename ConformalFactor -> EvolvedConformalFactor_cf; also continue work on SIMD stuff

--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -132,14 +132,14 @@
     "W &= e^{-2\\phi},\n",
     "\\end{align}\n",
     "\n",
-    "Thus if \"BSSN_quantities::ConformalFactor\" is set to \"chi\", then\n",
+    "Thus if \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"chi\", then\n",
     "\n",
     "\\begin{align}\n",
     "\\gamma_{ij} &= \\frac{1}{\\chi} \\bar{\\gamma}_{i j} \\\\\n",
     "&= \\frac{1}{\\text{cf}} \\bar{\\gamma}_{i j},\n",
     "\\end{align}\n",
     "\n",
-    "and if \"BSSN_quantities::ConformalFactor\" is set to \"W\", then\n",
+    "and if \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"W\", then\n",
     "\\begin{align}\n",
     "\\gamma_{ij} &= \\frac{1}{W^2} \\bar{\\gamma}_{i j} \\\\\n",
     "&= \\frac{1}{\\text{cf}^2} \\bar{\\gamma}_{i j}.\n",
@@ -157,14 +157,14 @@
     "gammaDD = ixp.zerorank2()\n",
     "\n",
     "exp4phi = sp.sympify(0)\n",
-    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "if par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"phi\":\n",
     "    exp4phi    = sp.exp(4*cf)\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"chi\":\n",
     "    exp4phi    = (1 / cf)\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"W\":\n",
     "    exp4phi    = (1 / cf**2)\n",
     "else:\n",
-    "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
+    "    print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
     "    exit(1)            \n",
     "\n",
     "for i in range(DIM):\n",
@@ -188,13 +188,13 @@
     "\n",
     "Thus computing first and second derivatives of $e^{4\\phi}$ in terms of the BSSN quantity $\\text{cf}$ requires only that we evaluate $\\phi_{,i}$ and $\\phi_{,ij}$ in terms of $e^{4\\phi}$ (computed above in terms of $\\text{cf}$) and derivatives of $\\text{cf}$:\n",
     "\n",
-    "If \"BSSN_quantities::ConformalFactor\" is set to \"phi\", then\n",
+    "If \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"phi\", then\n",
     "\\begin{align}\n",
     "\\phi_{,i} &= \\text{cf}_{,i} \\\\\n",
     "\\phi_{,ij} &= \\text{cf}_{,ij}\n",
     "\\end{align}\n",
     "\n",
-    "If \"BSSN_quantities::ConformalFactor\" is set to \"chi\", then\n",
+    "If \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"chi\", then\n",
     "\\begin{align}\n",
     "\\text{cf} = e^{-4\\phi} \\implies \\text{cf}_{,i} &= -4 e^{-4\\phi} \\phi_{,i} \\\\\n",
     "\\implies \\phi_{,i} &= -\\frac{e^{4\\phi}}{4} \\text{cf}_{,i} \\\\\n",
@@ -203,7 +203,7 @@
     "&= \\frac{1}{4} \\left[\\left(e^{4\\phi}\\right)^2 \\text{cf}_{,i} \\text{cf}_{,j} -e^{4\\phi} \\text{cf}_{,ij}\\right] \\\\\n",
     "\\end{align}\n",
     "\n",
-    "If \"BSSN_quantities::ConformalFactor\" is set to \"W\", then\n",
+    "If \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"W\", then\n",
     "\\begin{align}\n",
     "\\text{cf} = e^{-2\\phi} \\implies \\text{cf}_{,i} &= -2 e^{-2\\phi} \\phi_{,i} \\\\\n",
     "\\implies \\phi_{,i} &= -\\frac{e^{2\\phi}}{2} \\text{cf}_{,i} \\\\\n",
@@ -224,24 +224,24 @@
     "phidDD = ixp.zerorank2()\n",
     "cf_dD  = ixp.declarerank1(\"cf_dD\")\n",
     "cf_dDD = ixp.declarerank2(\"cf_dDD\",\"sym01\")\n",
-    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "if par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"phi\":\n",
     "    for i in range(DIM):\n",
     "        phidD[i]  = cf_dD[i]\n",
     "        for j in range(DIM):\n",
     "            phidDD[i][j] = cf_dDD[i][j]\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"chi\":\n",
     "    for i in range(DIM):\n",
     "        phidD[i]  = -sp.Rational(1,4)*exp4phi*cf_dD[i]\n",
     "        for j in range(DIM):\n",
     "            phidDD[i][j] = sp.Rational(1,4)*( exp4phi**2*cf_dD[i]*cf_dD[j] - exp4phi*cf_dDD[i][j] )\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"W\":\n",
     "    exp2phi = (1 / cf)\n",
     "    for i in range(DIM):\n",
     "        phidD[i]  = -sp.Rational(1,2)*exp2phi*cf_dD[i]\n",
     "        for j in range(DIM):\n",
     "            phidDD[i][j] = sp.Rational(1,2)*( exp4phi*cf_dD[i]*cf_dD[j] - exp2phi*cf_dDD[i][j] )\n",
     "else:\n",
-    "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
+    "    print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
     "    exit(1)\n",
     "\n",
     "exp4phidD  = ixp.zerorank1()\n",
