--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "# Step 1.e: Declare/initialize parameters for this module\n",
     "thismodule = \"BSSN_quantities\"\n",
-    "par.initialize_param(par.glb_param(\"char\", thismodule, \"ConformalFactor\", \"W\"))\n",
+    "par.initialize_param(par.glb_param(\"char\", thismodule, \"EvolvedConformalFactor_cf\", \"W\"))\n",
     "par.initialize_param(par.glb_param(\"bool\", thismodule, \"detgbarOverdetghat_equals_one\", \"True\"))"
    ]
   },
@@ -966,7 +966,7 @@
    "source": [
     "# Step 9.a.ii: Assuming cf=phi, define exp_m4phi, phi_dD, \n",
     "#              phi_dupD (upwind finite-difference version of phi_dD), and phi_DD\n",
-    "if par.parval_from_str(thismodule+\"::ConformalFactor\") == \"phi\":\n",
+    "if par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\") == \"phi\":\n",
     "    for i in range(DIM):\n",
     "        phi_dD[i] = cf_dD[i]\n",
     "        phi_dupD[i] = cf_dupD[i]\n",
@@ -996,7 +996,7 @@
    "source": [
     "# Step 9.a.iii: Assuming cf=W=e^{-2 phi}, define exp_m4phi, phi_dD, \n",
     "#               phi_dupD (upwind finite-difference version of phi_dD), and phi_DD\n",
-    "if par.parval_from_str(thismodule+\"::ConformalFactor\") == \"W\":\n",
+    "if par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\") == \"W\":\n",
     "    # \\partial_i W = \\partial_i (e^{-2 phi}) = -2 e^{-2 phi} \\partial_i phi\n",
     "    # -> \\partial_i phi = -\\partial_i cf / (2 cf)\n",
     "    for i in range(DIM):\n",
@@ -1030,7 +1030,7 @@
    "source": [
     "# Step 9.a.iv: Assuming cf=chi=e^{-4 phi}, define exp_m4phi, phi_dD, \n",
     "#              phi_dupD (upwind finite-difference version of phi_dD), and phi_DD\n",
-    "if par.parval_from_str(thismodule+\"::ConformalFactor\") == \"chi\":\n",
+    "if par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\") == \"chi\":\n",
     "    # \\partial_i chi = \\partial_i (e^{-4 phi}) = -4 e^{-4 phi} \\partial_i phi\n",
     "    # -> \\partial_i phi = -\\partial_i cf / (4 cf)\n",
     "    for i in range(DIM):\n",
@@ -1042,10 +1042,10 @@
     "            phi_dDD[i][j] = (- cf_dDD[i][j] + cf_dD[i]*cf_dD[j] / cf) / (4*cf)\n",
     "    exp_m4phi = cf\n",
     "\n",
-    "# Step 9.a.v: Error out if unsupported ConformalFactor choice is made:\n",
-    "cf_choice = par.parval_from_str(thismodule+\"::ConformalFactor\")\n",
+    "# Step 9.a.v: Error out if unsupported EvolvedConformalFactor_cf choice is made:\n",
+    "cf_choice = par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\")\n",
     "if not (cf_choice == \"phi\" or cf_choice == \"W\" or cf_choice == \"chi\"):\n",
-    "    print(\"Error: ConformalFactor == \"+par.parval_from_str(thismodule+\"::ConformalFactor\")+\" unsupported!\")\n",
+    "    print(\"Error: EvolvedConformalFactor_cf == \"+par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\")+\" unsupported!\")\n",
     "    exit(1)"
    ]
   },
