--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -347,7 +347,7 @@
     "\n",
     "# Step 5.1: Construct 3-Ricci tensor R_{ij} = gamma^{im} R_{ijml}\n",
     "RDD = ixp.zerorank2()\n",
-    "gammaUU, detgamma = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "gammaUU = AB.gammaUU\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
     "        for i in range(DIM):\n",
@@ -565,7 +565,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4.ipynb to latex\n",
-      "[NbConvertApp] Writing 56473 bytes to Tutorial-Psi4.tex\n",
+      "[NbConvertApp] Writing 56040 bytes to Tutorial-Psi4.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
