--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
@@ -72,7 +72,7 @@
     "rfm.reference_metric() # Create ReU, ReDD needed for rescaling B-L initial data, generating BSSN RHSs, etc.\n",
     "\n",
     "import BSSN.BSSN_quantities as Bq\n",
-    "par.set_parval_from_str(\"BSSN.BSSN_quantities::ConformalFactor\",\"phi\")\n",
+    "par.set_parval_from_str(\"BSSN.BSSN_quantities::EvolvedConformalFactor_cf\",\"phi\")\n",
     "\n",
     "#################\n",
     "# Next output C headers related to the numerical grids we just set up:\n",
