--- a/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -45,7 +45,7 @@
     "import indexedexp as ixp\n",
     "import reference_metric as rfm\n",
     "import BSSN.UIUCBlackHole as uibh\n",
-    "import BSSN.BSSN_quantities as Bq # The ConformalFactor parameter is used below\n",
+    "import BSSN.BSSN_quantities as Bq # The EvolvedConformalFactor_cf parameter is used below\n",
     "\n",
     "# The ADM & BSSN formalisms only work in 3D; they are 3+1 decompositions of Einstein's equations.\n",
     "#    To implement axisymmetry or spherical symmetry, simply set all spatial derivatives in\n",
@@ -295,21 +295,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3.4: Define the conformal factor variable $\\texttt{cf}$, based on the setting of the \"BSSN_quantities::ConformalFactor\" parameter.\n",
+    "### Step 3.4: Define the conformal factor variable $\\texttt{cf}$, based on the setting of the \"BSSN_quantities::EvolvedConformalFactor_cf\" parameter.\n",
     "\n",
-    "For example if \"ConformalFactor\" is set to \"phi\", we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
+    "For example if \"EvolvedConformalFactor_cf\" is set to \"phi\", we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
     "\n",
     "$$\n",
     "\\phi = \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right).\n",
     "$$\n",
     "\n",
-    "Alternatively if \"BSSN_quantities::ConformalFactor\" is set to \"chi\", then\n",
+    "Alternatively if \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"chi\", then\n",
     "$$\n",
     "\\chi = e^{-4 \\phi} = \\exp\\left(-4 \\frac{1}{12} \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) \n",
     "= \\exp\\left(-\\frac{1}{3} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{-1/3}.\n",
     "$$\n",
     "\n",
-    "Finally if \"BSSN_quantities::ConformalFactor\" is set to \"W\", then\n",
+    "Finally if \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"W\", then\n",
     "$$\n",
     "W = e^{-2 \\phi} = \\exp\\left(-2 \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
     "\\exp\\left(-\\frac{1}{6} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
@@ -325,14 +325,14 @@
    "source": [
     "cf = sp.sympify(0)\n",
     "\n",
-    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "if par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"phi\":\n",
     "    cf = sp.Rational(1,12)*sp.log(gammaDET/gammabarDET)\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"chi\":\n",
     "    cf = (gammaDET/gammabarDET)**(-sp.Rational(1,3))\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"W\":\n",
     "    cf = (gammaDET/gammabarDET)**(-sp.Rational(1,6))\n",
     "else:\n",
-    "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
+    "    print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
     "    exit(1)"
    ]
   },
