Tutorial-ADM_Initial_Data-ShiftedKerrSchild: fix a couple typos

--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -12,13 +12,13 @@
     "\n",
     "### NRPy+ Source Code for this module: [BSSN/ShiftedKerrSchild.py](../edit/BSSN/ShiftedKerrSchild.py)\n",
     "\n",
-    "<font color='red'>**WARNING: This module has not yet passed code validation testing.**</font>\n",
+    "<font color='green'>**This module has been validated to exhibit convergence to zero of the Hamiltonian and momentum constraint violations at the expected order to the exact solution (see [start-to-finish Shifted Kerr-Schild module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Shifted_KerrSchild_initial_data.ipynb) for full analysis).**</font>\n",
     "\n",
     "<a id='top'></a>$$\\label{top}$$\n",
     "\n",
     "### Introduction\n",
     "\n",
-    "Kerr-Schild coordinates are similar to the trumpet spacetime. The radial shift both reduces the black hole's coordinate size and causes the very strongly-curved spacetime fields at $r<r_{0}$ to vanish deep inside the horizon, which aids in numerical stability when evolving hydrodynamic, MHD, and FFE fields inside the horizon.\n",
+    "Shifted Kerr-Schild coordinates are similar to the trumpet spacetime, in that $r=0$ maps to some finite radius surface in Kerr-Schild coordinates. The radial shift $r_0$ both reduces the black hole's coordinate size and causes the very strongly-curved spacetime fields at $r<r_{0}$ to vanish deep inside the horizon, which aids in numerical stability, e.g., when evolving hydrodynamic, MHD, and FFE fields inside the horizon.\n",
     "\n",
     "\n",
     "### Table of Contents:  \n",
@@ -52,7 +52,7 @@
     "\n",
     "* The black hole mass $M$.\n",
     "* The black hole spin parameter $a$\n",
-    "* The radial offset $r_{\\rm KS}$\n"
+    "* The radial offset $r_0$\n"
    ]
   },
   {
