--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -290,7 +290,24 @@
     "                            [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\\\n",
     "                             \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
     "                            [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "                            Conservs_CKernel.replace(\"time\",\"cctk_time\"))\n"
+    "                            Conservs_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "\n",
+    "# Write the C code kernel to file.\n",
+    "with open(\"GiRaFFE_standalone/Prereqs.h\", \"w\") as file:\n",
+    "    file.write(str(Prereqs_looped))\n",
+    "\n",
+    "with open(\"GiRaFFE_standalone/metric_quantities.h\", \"w\") as file:\n",
+    "    file.write(str(metric_quantities_looped))\n",
+    "\n",
+    "with open(\"GiRaFFE_standalone/Conservs.h\", \"w\") as file:\n",
+    "    file.write(str(Conservs_looped))\n",
+    "\n",
+    "# Step 5: Import the function to calculate u0 and write it to a file.\n",
+    "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
+    "#u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)\n",
+    "\n",
+    "with open(\"GiRaFFE_standalone/computeu0_Cfunction.h\", \"w\") as file:\n",
+    "    file.write(u0etc.computeu0_Cfunction)\n"
    ]
   },
   {
@@ -304,9 +321,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_10.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_8.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_6.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_4.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0U.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1U.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2U.h\"\n"
+     ]
+    }
+   ],
    "source": [
     "# The A-to-B driver\n",
     "\n",
@@ -429,9 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Declaring StildeD as a gridfunction is unnecessary in GiRaFFe_HO. While it was declared in GiRaFFEfood_HO,\n",
     "# those have since been cleared to avoid conflict; so, we re-declare it here.\n",
@@ -444,14 +491,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BrillLindquist_Playground.c: The Main C Code"
+    "# GiRaFFE_standalone.c: The Main C Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Part P0: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\n",
+    "with open(\"GiRaFFE_standalone/NGHOSTS.h\", \"w\") as file:\n",
+    "    file.write(\"// Part P0: Set the number of ghost zones, from NRPy+'s FD_CENTDERIVS_ORDER\\n\")\n",
+    "    # Upwinding in BSSN requires that NGHOSTS = FD_CENTDERIVS_ORDER/2 + 1 <- Notice the +1.\n",
+    "    file.write(\"#define NGHOSTS \"+str(int(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2)+1)+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_standalone/GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_standalone/GiRaFFE_standalone.c\n",
     "// Step P1: Import needed header files\n",
@@ -466,6 +534,13 @@
     "#define REAL double\n",
     "\n",
     "// Step P3: Set free parameters\n",
+    "const REAL B_p_aligned_rotator                                                           = 1.0e-5;\n",
+    "const REAL Omega_aligned_rotator                                                         = 0.2;\n",
+    "const REAL min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED = 1.0; // Must be equal! v\n",
+    "const REAL R_NS_aligned_rotator                                                          = 1.0; // Must be equal! ^\n",
+    "const REAL xi                                                                            = 1.8;\n",
+    "const REAL GAMMA_SPEED_LIMIT                                                             = 2000.0\n",
+    "\n",
     "// Step P3a: Free parameters for the numerical grid\n",
     "// Cartesian coordinates parameters\n",
     "const REAL xmin = -10.,xmax=10.;\n",
@@ -491,7 +566,62 @@
     "( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * ( (k) + Nxx_plus_2NGHOSTS[2] * (g) ) ) )\n",
     "#define IDX3(i,j,k) ( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * (k) ) )\n",
     "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
-    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n"
+    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
+    "\n",
+    "// Step P7: Set #define's for GRFFE gridfunctions. C code generated above\n",
+    "#include \"../CurviBoundaryConditions/gridfunction_defines.h\"\n",
+    "\n",
+    "#define LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) \\\n",
+    "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++)\n",
+    "\n",
+    "void xxCart(REAL *xx[3],const int i0,const int i1,const int i2, REAL xCart[3]) {\n",
+    "    REAL xx0 = xx[0][i0];\n",
+    "    REAL xx1 = xx[1][i1];\n",
+    "    REAL xx2 = xx[2][i2];\n",
+    "#include \"../CurviBoundaryConditions/xxCart.h\"\n",
+    "}\n",
+    "\n",
+    "// Step P8: Include basic functions needed to impose curvilinear\n",
+    "//          parity and boundary conditions.\n",
+    "#include \"../CurviBoundaryConditions/curvilinear_parity_and_outer_boundary_conditions.h\"\n",
+    "\n",
+    "// Step P9: Find the CFL-constrained timestep\n",
+    "REAL find_timestep(const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3],REAL *xx[3], const REAL CFL_FACTOR) {\n",
+    "  const REAL dxx0 = dxx[0], dxx1 = dxx[1], dxx2 = dxx[2];\n",
+    "  REAL dsmin = 1e38; // Start with a crazy high value... close to the largest number in single precision.\n",
+    "  LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[2]-NGHOSTS) {\n",
+    "    const REAL xx0 = xx[0][i0], xx1 = xx[1][i1], xx2 = xx[2][i2];\n",
+    "    REAL ds_dirn0, ds_dirn1, ds_dirn2;\n",
+    "#include \"ds_dirn.h\"\n",
+    "#define MIN(A, B) ( ((A) < (B)) ? (A) : (B) )\n",
+    "    // Set dsmin = MIN(dsmin, ds_dirn0, ds_dirn1, ds_dirn2);\n",
+    "    dsmin = MIN(dsmin,MIN(ds_dirn0,MIN(ds_dirn1,ds_dirn2)));\n",
+    "  }\n",
+    "  return dsmin*CFL_FACTOR;\n",
+    "}\n",
+    "\n",
+    "// While this code is generally cartesian, we will need an r coordinate for the initial data:\n",
+    "REAL sq_radial_coord(x,y,z) { return x*x+y*y+z*z; }\n",
+    "\n",
+    "// Step P10: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
+    "void initial_data(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\n",
+    "  REAL R_NS_sq = R_NS_aligned_rotator*R_NS_aligned_rotator;\n",
+    "#pragma omp parallel for\n",
+    "  LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], 0,Nxx_plus_2NGHOSTS[1], 0,Nxx_plus_2NGHOSTS[2]) {\n",
+    "    const int idx = IDX3(i0,i1,i2);\n",
+    "#include \"GiRaFFEfood_A_v_AlignedRotator.h\"\n",
+    "    if(sq_radial_coord(xx[0][i0],xx[1][i1],xx[2][i2]) > R_NS_sq) {\n",
+    "        ValenciavU0GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = 0;\n",
+    "        ValenciavU1GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = 0;\n",
+    "        ValenciavU2GF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = 0;\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "// Step P11: Declare the function to evaluate the GRFFE RHSs\n",
+    "void rhs_eval(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3], const REAL *in_gfs,REAL *rhs_gfs) {\n",
+    "#include \"BSSN_RHSs.h\"\n",
+    "}\n"
    ]
   },
   {
