Psi4: Update tutorial modules to make consistent with separate psi4 Python modules

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $\\psi_4$\n",
+    "# The Outgoing Gravitational Wave Weyl scalar $\\psi_4$\n",
     "\n",
     "### Author: Zach Etienne\n",
     "\n",
-    "<font color='red'>**This module has not yet undergone validation testing.**</font>\n",
+    "<font color='green'>**This module has been validated to agree at roundoff error with the WeylScal4 ETK thorn in Cartesian coordinates (as it agrees to roundoff error with Patrick Nelson's [Cartesian Weyl Scalars & Invariants NRPy+ tutorial module](Tutorial-WeylScalarsInvariants-Cartesian.ipynb), which itself was validated against WeylScal4). In addition, in SinhSpherical coordinates it yields results for a ringing Brill-Lindquist black hole remnant that agree with black hole perturbation theory to more than 7 decades in amplitude, surpassing the agreement seen in Fig. 6 of [Ruchlin, Etienne, & Baumgarte](https://arxiv.org/pdf/1712.07658.pdf).**</font>\n",
     "\n",
     "## A Note on Notation\n",
     "\n",
@@ -243,14 +243,14 @@
    "source": [
     "# Step 3: Construct the (rank-4) tensor in term 1 of psi_4 (referring to Eq 5.1 in \n",
     "#   Baker, Campanelli, Lousto (2001); https://arxiv.org/pdf/gr-qc/0104063.pdf\n",
-    "rank4term1 = ixp.zerorank4()\n",
+    "rank4term1DDDD = ixp.zerorank4()\n",
     "KDD = AB.KDD\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
-    "                rank4term1[i][j][k][l] = RDDDD[i][j][k][l] + KDD[i][k]*KDD[l][j] - KDD[i][l]*KDD[k][j]"
+    "                rank4term1DDDD[i][j][k][l] = RDDDD[i][j][k][l] + KDD[i][k]*KDD[l][j] - KDD[i][l]*KDD[k][j]"
    ]
   },
   {
@@ -278,13 +278,13 @@
    "source": [
     "# Step 4: Construct the (rank-3) tensor in term 2 of psi_4 (referring to Eq 5.1 in \n",
     "#   Baker, Campanelli, Lousto (2001); https://arxiv.org/pdf/gr-qc/0104063.pdf\n",
-    "rank3term2 = ixp.zerorank3()\n",
+    "rank3term2DDD = ixp.zerorank3()\n",
     "KDDdD = AB.KDDdD\n",
     "\n",
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
-    "            rank3term2[j][k][l] = sp.Rational(1,2)*(KDDdD[j][k][l] - KDDdD[j][l][k])"
+    "            rank3term2DDD[j][k][l] = sp.Rational(1,2)*(KDDdD[j][k][l] - KDDdD[j][l][k])"
    ]
   },
   {
@@ -306,7 +306,7 @@
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
     "            for p in range(DIM):\n",
-    "                rank3term2[j][k][l] += sp.Rational(1,2)*(GammaUDD[p][j][k]*KDD[l][p] - GammaUDD[p][j][l]*KDD[k][p])"
+    "                rank3term2DDD[j][k][l] += sp.Rational(1,2)*(GammaUDD[p][j][k]*KDD[l][p] - GammaUDD[p][j][l]*KDD[k][p])"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
-    "            rank3term2[j][k][l] *= sp.sympify(-8)"
+    "            rank3term2DDD[j][k][l] *= sp.sympify(-8)"
    ]
   },
   {
@@ -404,16 +404,16 @@
    "source": [
     "# Next we put these terms together to construct the entire term in parentheses:\n",
     "# +4 \\left(R_{jl} - K_{jp} K^p_l + K K_{jl} \\right),\n",
-    "rank2term3 = ixp.zerorank2()\n",
+    "rank2term3DD = ixp.zerorank2()\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
-    "        rank2term3[j][l] = RDD[j][l] + trK*KDD[j][l]\n",
+    "        rank2term3DD[j][l] = RDD[j][l] + trK*KDD[j][l]\n",
     "        for p in range(DIM):\n",
-    "            rank2term3[j][l] += - KDD[j][p]*KUD[p][l]\n",
+    "            rank2term3DD[j][l] += - KDD[j][p]*KUD[p][l]\n",
     "# Finally we multiply by +4:\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
-    "        rank2term3[j][l] *= sp.sympify(4)"
+    "        rank2term3DD[j][l] *= sp.sympify(4)"
    ]
   },
   {
@@ -474,35 +474,39 @@
     "    return -n[mu]*Mre[nu]*n[eta]*Mim[delta] - n[mu]*Mim[nu]*n[eta]*Mre[delta]\n",
     "\n",
     "\n",
-    "psi4_re = sp.sympify(0)\n",
-    "psi4_im = sp.sympify(0)\n",
+    "# We split psi_4 into three pieces, to expedite & possibly parallelize C code generation.\n",
+    "psi4_re_pt = [sp.sympify(0),sp.sympify(0),sp.sympify(0)]\n",
+    "psi4_im_pt = [sp.sympify(0),sp.sympify(0),sp.sympify(0)]\n",
+    "\n",
     "# First term:\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
-    "                psi4_re += rank4term1[i][j][k][l]*tetrad_product__Real_psi4(n4U,mre4U,mim4U, i+1,j+1,k+1,l+1)\n",
-    "                psi4_im += rank4term1[i][j][k][l]*tetrad_product__Imag_psi4(n4U,mre4U,mim4U, i+1,j+1,k+1,l+1)\n",
+    "                psi4_re_pt[0] += rank4term1DDDD[i][j][k][l] * \\\n",
+    "                                 tetrad_product__Real_psi4(n4U,mre4U,mim4U, i+1,j+1,k+1,l+1)\n",
+    "                psi4_im_pt[0] += rank4term1DDDD[i][j][k][l] * \\\n",
+    "                                 tetrad_product__Imag_psi4(n4U,mre4U,mim4U, i+1,j+1,k+1,l+1)\n",
     "\n",
     "# Second term:\n",
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
-    "            psi4_re += rank3term2[j][k][l] * \\\n",
+    "            psi4_re_pt[1] += rank3term2DDD[j][k][l] * \\\n",
     "                       sp.Rational(1,2)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1)\n",
     "                                         -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,k+1,l+1) )\n",
-    "            psi4_im += rank3term2[j][k][l] * \\\n",
+    "            psi4_im_pt[1] += rank3term2DDD[j][k][l] * \\\n",
     "                       sp.Rational(1,2)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1)\n",
     "                                         -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,k+1,l+1) )\n",
     "# Third term:\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
-    "        psi4_re += rank2term3[j][l] * \\\n",
+    "        psi4_re_pt[2] += rank2term3DD[j][l] * \\\n",
     "                       (sp.Rational(1,4)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1)\n",
     "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1)\n",
     "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0)\n",
     "                                          +tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,l+1,0)))\n",
-    "        psi4_im += rank2term3[j][l] * \\\n",
+    "        psi4_im_pt[2] += rank2term3DD[j][l] * \\\n",
     "                       (sp.Rational(1,4)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1)\n",
     "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1)\n",
     "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0)\n",
@@ -542,8 +546,12 @@
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between this tutorial and BSSN.Psi4 NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "psi4_im - BP4.psi4_im = 0\n",
-      "psi4_re - BP4.psi4_re = 0\n"
+      "psi4_im_pt[0] - BP4.psi4_im_pt[0] = 0\n",
+      "psi4_re_pt[0] - BP4.psi4_re_pt[0] = 0\n",
+      "psi4_im_pt[1] - BP4.psi4_im_pt[1] = 0\n",
+      "psi4_re_pt[1] - BP4.psi4_re_pt[1] = 0\n",
+      "psi4_im_pt[2] - BP4.psi4_im_pt[2] = 0\n",
+      "psi4_re_pt[2] - BP4.psi4_re_pt[2] = 0\n"
      ]
     }
    ],
@@ -553,13 +561,14 @@
     "#          which should do exactly the same as in Steps 1-16 above.\n",
     "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "import BSSN.Psi4 as BP4\n",
-    "BP4.Psi4(mre4U,mim4U,n4U)\n",
+    "BP4.Psi4(specify_tetrad=False)\n",
     "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between this tutorial and BSSN.Psi4 NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
-    "print(\"psi4_im - BP4.psi4_im = \" + str(psi4_im - BP4.psi4_im))\n",
-    "print(\"psi4_re - BP4.psi4_re = \" + str(psi4_re - BP4.psi4_re))"
+    "for part in range(3):\n",
+    "    print(\"psi4_im_pt[\"+str(part)+\"] - BP4.psi4_im_pt[\"+str(part)+\"] = \" + str(psi4_im_pt[part] - BP4.psi4_im_pt[part]))\n",
+    "    print(\"psi4_re_pt[\"+str(part)+\"] - BP4.psi4_re_pt[\"+str(part)+\"] = \" + str(psi4_re_pt[part] - BP4.psi4_re_pt[part]))"
    ]
   },
   {
@@ -582,7 +591,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4.ipynb to latex\n",
-      "[NbConvertApp] Writing 56611 bytes to Tutorial-Psi4.tex\n",
+      "[NbConvertApp] Writing 60104 bytes to Tutorial-Psi4.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
