Update NRPy+ main page to reflect latest updates to Psi4 modules

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -78,6 +78,10 @@
     "        + **Start-to-Finish initial data validation modules**: (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a validation test for the **numerical** ADM-Spherical-to-BSSN-Curvilinear initial data conversion module. TOV initial data on the other hand are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are truly known only numerically):\n",
     "            + [Spinning (\"UIUC\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
     "            + [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)\n",
+    "+ **Diagnostic curvilinear BSSN modules**\n",
+    "    + [The gravitational wave Weyl scalar $\\psi_4$, in arbitrary curvilinear coordinates](Tutorial-Psi4.ipynb)\n",
+    "        + [Constructing the quasi-Kinnersley tetrad for $\\psi_4$](Tutorial-Psi4_tetrads.ipynb)\n",
+    "            + [Start-to-Finish validation of above expressions in Cartesian coordinates, against Patrick Nelson's Weyl Scalars & Invariants module](BSSN/Psi4Cartesianvalidation/Tutorial-Psi4-Cartesian_validation.ipynb)\n",
     "+ **Start-to-Finish curvilinear BSSN simulation examples**:\n",
     "    + [<font color='purple'>**Colliding black holes!**</font>](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb) ***In progress***"
