The standalone code now runs.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -570,8 +570,6 @@
     "const REAL GAMMA_SPEED_LIMIT                                                             = 2000.0;\n",
     "const int current_sheet_null_v = 0; // Boolean: 1=true,0=false\n",
     "\n",
-    "// Step P5: Set free parameters for the (Brill-Lindquist) initial data\n",
-    "\n",
     "// Step P6: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
     "//          data in a 1D array. In this case, consecutive values of \"i\" \n",
     "//          (all other indices held to a fixed value) are consecutive in memory, where \n",
@@ -600,8 +598,43 @@
     "// Step P8: Include basic functions needed to impose curvilinear\n",
     "//          parity and boundary conditions.\n",
     "#include \"../CurviBoundaryConditions/curvilinear_parity_and_outer_boundary_conditions.h\"\n",
+    "// Currently, we're using basic Cartesian boundary conditions, pending fixes by Zach.\n",
+    "// Part P8a: Declare boundary condition FACE_UPDATE macro,\n",
+    "//          which updates a single face of the 3D grid cube\n",
+    "//          using quadratic polynomial extrapolation.\n",
+    "#define  FACE_UPDATE(which_gf, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
+    "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\n",
+    "        gfs[IDX4(which_gf,i0,i1,i2)] =                                  \\\n",
+    "          +3.0*gfs[IDX4(which_gf,i0+1*FACEX0,i1+1*FACEX1,i2+1*FACEX2)]  \\\n",
+    "          -3.0*gfs[IDX4(which_gf,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]  \\\n",
+    "          +1.0*gfs[IDX4(which_gf,i0+3*FACEX0,i1+3*FACEX1,i2+3*FACEX2)]; \\\n",
+    "      }\n",
     "\n",
-    "// Step P8b: Import C files for the A-to-B driver and the conservative-to-primitive solver\n",
+    "// Part P8b: Boundary condition driver routine: Apply BCs to all six\n",
+    "//          boundary faces of the cube, filling in the innermost\n",
+    "//          ghost zone first, and moving outward.\n",
+    "void apply_bcs(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *gfs) {\n",
+    "#pragma omp parallel for\n",
+    "    for(int which_gf=0;which_gf<NUM_EVOL_GFS;which_gf++) {\n",
+    "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
+    "    int imax[3] = { Nxx_plus_2NGHOSTS[0]-NGHOSTS, Nxx_plus_2NGHOSTS[1]-NGHOSTS, Nxx_plus_2NGHOSTS[2]-NGHOSTS };\n",
+    "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      FACE_UPDATE(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      FACE_UPDATE(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "\n",
+    "      FACE_UPDATE(which_gf, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      FACE_UPDATE(which_gf, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "\n",
+    "      FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "      FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// Step P8c: Import C files for the A-to-B driver and the conservative-to-primitive solver\n",
     "#include \"driver_AtoB.c\"\n",
     "#include \"driver_conserv_to_prims_FFE.C\"\n",
     "\n",
@@ -725,6 +758,7 @@
     "    int N_final = (int)(t_final / dt + 0.5); // The number of iterations in time.\n",
     "                                           //Add 0.5 to account for C rounding down integers.\n",
     "\n",
+    "    printf(\"Can we set up grids?\\n\");\n",
     "    // Step 0e: Find ghostzone mappings and parities:\n",
     "    gz_map *bc_gz_map = (gz_map *)malloc(sizeof(gz_map)*Nxx_plus_2NGHOSTS_tot);\n",
     "    parity_condition *bc_parity_conditions = (parity_condition *)malloc(sizeof(parity_condition)*Nxx_plus_2NGHOSTS_tot);\n",
@@ -1481,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -1490,26 +1524,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove 'GiRaFFE_standalone': Is a directory\n",
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 1.39864611626 seconds.\n",
+      "Finished in 1.63052392006 seconds.\n",
       "\n",
       "Now running at low-resolution. Should take ~25 seconds...\n",
+      "\n",
+      "Can we set up grids?\n",
+      "Error. Cartesian disagreement: ( -1.300000000000000e+01 -1.300000000000000e+01 -1.300000000000000e+01 ) != ( 1.000000000000000e+00 1.000000000000000e+00 1.000000000000000e+00 )\n",
+      "Finished in 0.0194861888885 seconds.\n",
+      "\n",
+      "Now running at higher-resolution. Should take ~75 seconds...\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!rm -f GiRaFFE_standalone out72*.txt out96*.txt\n",
+    "!rm -f GiRaFFE_standalone_AR out72*.txt out96*.txt\n",
     "\n",
     "print(\"Now compiling, should take ~10 seconds...\\n\")\n",
     "start = time.time()\n",
-    "!g++ -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp GiRaFFE_standalone/GiRaFFE_standalone.c -lm\n",
+    "!g++ -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_AR -lm\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\nNow running at low-resolution. Should take ~25 seconds...\\n\")\n",
     "\n",
-    "#-o GiRaFFE_standalone # I'll reinstate this once I add output. \n"
+    "# # I'll reinstate this once I add output. \n",
+    "\n",
+    "start = time.time()\n",
+    "!taskset -c 0,1 ./GiRaFFE_standalone_AR 10 10 10 0.5\n",
+    "end = time.time()\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\nNow running at higher-resolution. Should take ~75 seconds...\\n\")\n",
+    "\n"
    ]
   },
   {
