Tutorial-Spinning_Effective_One_Body_Numerical_Relativity_Hamiltonian-Cartesian: Add momentum derivs.

--- a/Tutorial-Spinning_Effective_One_Body_Numerical_Relativity_Hamiltonian-Cartesian.ipynb
+++ b/Tutorial-Spinning_Effective_One_Body_Numerical_Relativity_Hamiltonian-Cartesian.ipynb
@@ -908,8 +908,16 @@
     "        file.write(str(lhss_deriv_y[i]).replace(\"prm\",\"prm_y\")+\" = \"+str(rhss_deriv_y[i]).replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"prm\",\"prm_y\")+\"\\n\")\n",
     "    for i in range(len(lhss_deriv_z)):\n",
     "        file.write(str(lhss_deriv_z[i]).replace(\"prm\",\"prm_z\")+\" = \"+str(rhss_deriv_z[i]).replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"prm\",\"prm_z\")+\"\\n\")\n",
+    "\n",
+    "    for i in range(len(lhss_deriv_px)):\n",
+    "        file.write(str(lhss_deriv_px[i]).replace(\"prm\",\"prm_px\")+\" = \"+str(rhss_deriv_px[i]).replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"prm\",\"prm_px\")+\"\\n\")\n",
+    "    for i in range(len(lhss_deriv_py)):\n",
+    "        file.write(str(lhss_deriv_py[i]).replace(\"prm\",\"prm_py\")+\" = \"+str(rhss_deriv_py[i]).replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"prm\",\"prm_py\")+\"\\n\")\n",
+    "    for i in range(len(lhss_deriv_pz)):\n",
+    "        file.write(str(lhss_deriv_pz[i]).replace(\"prm\",\"prm_pz\")+\" = \"+str(rhss_deriv_pz[i]).replace(\"sqrt(\",\"sp.sqrt(\").replace(\"log(\",\"sp.log(\").replace(\"Abs(\",\"sp.Abs(\").replace(\"prm\",\"prm_pz\")+\"\\n\")\n",
     "    file.write(\"\"\"\n",
-    "outputC([Hrealprm_x,Hrealprm_y,Hrealprm_z],[\"Hrealprm_x\",\"Hrealprm_y\",\"Hrealprm_z\"],\"/tmp/outC.h\",\"outCverbose=False,includebraces=False\")\n",
+    "outputC([Hrealprm_x,Hrealprm_y,Hrealprm_z,Hrealprm_px,Hrealprm_py,Hrealprm_pz],\n",
+    "        [\"Hrealprm_x\",\"Hrealprm_y\",\"Hrealprm_z\",\"Hrealprm_px\",\"Hrealprm_py\",\"Hrealprm_pz\"],\"/tmp/outC.h\",\"outCverbose=False,includebraces=False\")\n",
     "    \"\"\")"
    ]
   },
