Corrected apply_bcs function call.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -684,25 +684,30 @@
     "\n",
     "// Step P11: Declare the function to evaluate the GRFFE RHSs\n",
     "// Step P11a: Create the function to calculate u4upperZero:\n",
-    "void calc_u0(const REAL alpha,const int idx,REAL *aux_gfs)\n",
+    "void calc_u0(const int Nxx_plus_2NGHOSTS[3],REAL *aux_gfs)\n",
     "{\n",
-    "  REAL u0;\n",
-    "  REAL ValenciavU0 = aux_gfs[IDX4pt(VALENCIAVU0GF,idx)];\n",
-    "  REAL ValenciavU1 = aux_gfs[IDX4pt(VALENCIAVU1GF,idx)];\n",
-    "  REAL ValenciavU2 = aux_gfs[IDX4pt(VALENCIAVU2GF,idx)];\n",
-    "  REAL gammaDD00 = aux_gfs[IDX4pt(GAMMADD00GF,idx)];\n",
-    "  REAL gammaDD01 = aux_gfs[IDX4pt(GAMMADD01GF,idx)];\n",
-    "  REAL gammaDD02 = aux_gfs[IDX4pt(GAMMADD02GF,idx)];\n",
-    "  REAL gammaDD11 = aux_gfs[IDX4pt(GAMMADD11GF,idx)];\n",
-    "  REAL gammaDD12 = aux_gfs[IDX4pt(GAMMADD12GF,idx)];\n",
-    "  REAL gammaDD22 = aux_gfs[IDX4pt(GAMMADD22GF,idx)];\n",
+    "    int idx;\n",
+    "    LOOP_REGION(0,Nxx_plus_2NGHOSTS[0],0,Nxx_plus_2NGHOSTS[1],0,Nxx_plus_2NGHOSTS[2]){\n",
+    "        idx = IDX3(i0,i1,i2);\n",
+    "        REAL u0;\n",
+    "        REAL ValenciavU0 = aux_gfs[IDX4pt(VALENCIAVU0GF,idx)];\n",
+    "        REAL ValenciavU1 = aux_gfs[IDX4pt(VALENCIAVU1GF,idx)];\n",
+    "        REAL ValenciavU2 = aux_gfs[IDX4pt(VALENCIAVU2GF,idx)];\n",
+    "        REAL alpha = aux_gfs[IDX4pt(ALPHAGF,idx)];\n",
+    "        REAL gammaDD00 = aux_gfs[IDX4pt(GAMMADD00GF,idx)];\n",
+    "        REAL gammaDD01 = aux_gfs[IDX4pt(GAMMADD01GF,idx)];\n",
+    "        REAL gammaDD02 = aux_gfs[IDX4pt(GAMMADD02GF,idx)];\n",
+    "        REAL gammaDD11 = aux_gfs[IDX4pt(GAMMADD11GF,idx)];\n",
+    "        REAL gammaDD12 = aux_gfs[IDX4pt(GAMMADD12GF,idx)];\n",
+    "        REAL gammaDD22 = aux_gfs[IDX4pt(GAMMADD22GF,idx)];\n",
     "\n",
-    "#include \"computeu0_Cfunction.h\"\n",
+    "        #include \"computeu0_Cfunction.h\"\n",
     "\n",
-    "  aux_gfs[IDX4pt(U4UPPERZEROGF,idx)] = u0;\n",
-    "  aux_gfs[IDX4pt(VALENCIAVU0GF,idx)] = ValenciavU0;\n",
-    "  aux_gfs[IDX4pt(VALENCIAVU1GF,idx)] = ValenciavU1;\n",
-    "  aux_gfs[IDX4pt(VALENCIAVU2GF,idx)] = ValenciavU2;\n",
+    "        aux_gfs[IDX4pt(U4UPPERZEROGF,idx)] = u0;\n",
+    "        aux_gfs[IDX4pt(VALENCIAVU0GF,idx)] = ValenciavU0;\n",
+    "        aux_gfs[IDX4pt(VALENCIAVU1GF,idx)] = ValenciavU1;\n",
+    "        aux_gfs[IDX4pt(VALENCIAVU2GF,idx)] = ValenciavU2;\n",
+    "    }\n",
     "}\n",
     "\n",
     "// Step P11b: Set the quantities to be differentiated by finite difference for the RHSs--ALWAYS run immediately \n",
@@ -804,7 +809,8 @@
     "    //          are sometimes ill-defined in ghost zones.\n",
     "    //          E.g., spherical initial data might not be\n",
     "    //          properly defined at points where r=-1.\n",
-    "    apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions,NUM_EVOL_GFS,evol_gf_parity, evol_gfs);\n",
+    "    //apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions,NUM_EVOL_GFS,evol_gf_parity, evol_gfs);\n",
+    "    apply_bcs(Nxx, Nxx_plus_2NGHOSTS, evol_gfs);\n",
     "    \n",
     "    // Rerun AtoB for consistency:\n",
     "    driver_A_to_B(Nxx, Nxx_plus_2NGHOSTS, dxx, evol_gfs, aux_gfs);\n",
@@ -824,6 +830,9 @@
     "    /***************************************************/\n",
     "    printf(\"Starting time step %d...\\n\",n);\n",
     "    /* -= RK4: Step 1 of 4 =- */\n",
+    "    /* Recalculate u0=u4upperZero from Valencia        */\n",
+    "    /*     3-velocity and speed-limit Valencia         */\n",
+    "    calc_u0(Nxx_plus_2NGHOSTS,aux_gfs);\n",
     "    /* First evaluate k1 = RHSs expression             */\n",
     "    quantities_to_FD_for_rhs_eval(Nxx_plus_2NGHOSTS,dxx,xx,evol_gfs,aux_gfs);\n",
     "    rhs_eval(Nxx,Nxx_plus_2NGHOSTS,dxx, xx,evol_gfs,aux_gfs, k1_gfs);\n",
@@ -837,7 +846,8 @@
     "    }\n",
     "    /* Finally, apply boundary conditions to           */\n",
     "    /* next_in_gfs, so its data are set everywhere.    */\n",
-    "    apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions,NUM_EVOL_GFS,evol_gf_parity, evol_gfs); // For RK4: Change evol_gfs back to next_in_gfs!\n",
+    "    //apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions,NUM_EVOL_GFS,evol_gf_parity, evol_gfs); // For RK4: Change evol_gfs back to next_in_gfs!\n",
+    "    apply_bcs(Nxx, Nxx_plus_2NGHOSTS, evol_gfs);\n",
     "\n",
     "    /* Remaining RK substeps go here once Euler is working.\n",
     "    */\n",
@@ -1544,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
@@ -1555,7 +1565,7 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 1.64966678619 seconds.\n",
+      "Finished in 1.63536000252 seconds.\n",
       "\n",
       "Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
@@ -1589,20 +1599,20 @@
       "Computing A to B at z = max...\n",
       "Starting conservative-to-primitive solver...\n",
       "Starting time step 0...\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 1.000000\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
       "Starting A to B driver with Order = 4...\n",
       "Computing A to B with Order = 4...\n",
       "Computing A to B with Order = 2...\n",
@@ -1620,20 +1630,20 @@
       "Starting conservative-to-primitive solver...\n",
       "Writing output...\n",
       "Starting time step 1...; ETA inf s | t/h 0.00 | gp/s 0.00e+00\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
-      "u4upperZero = 0.000000\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
+      "u4upperZero = 44.721360\n",
       "Starting A to B driver with Order = 4...\n",
       "Computing A to B with Order = 4...\n",
       "Computing A to B with Order = 2...\n",
@@ -1650,8 +1660,8 @@
       "Computing A to B at z = max...\n",
       "Starting conservative-to-primitive solver...\n",
       "Writing output...\n",
-      "\u001b[2KIt: 1 t=1.00 | 100.0%; ETA 0 s | t/h 1687811.19 | gp/s 1.88e+06\n",
-      "Finished in 0.0141568183899 seconds.\n",
+      "\u001b[2KIt: 1 t=1.00 | 100.0%; ETA 0 s | t/h 1516254.88 | gp/s 1.68e+06\n",
+      "Finished in 0.0142879486084 seconds.\n",
       "\n",
       "Now running at higher-resolution. Should take ~75 seconds...\n",
       "\n"
